[package]
name = "log-service-wrust"
version = "0.1.0"
authors = ["Tuong Nguyen <tuongn09@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nats = "0.9.7"
serde = { version = "1.0.124", features = ["derive"] }
toml = "0.5.8"
dotenv = "0.15.0"